# dualboot-TaskManager

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
main/: admin.py  permissions.py  serializers.py  views.py
main/migrations/: 0001_initial.py  0002_user_role.py  0003_tag_task.py  0004_alter_task_deadline.py  0005_alter_task_deadline.py  0006_alter_task_deadline.py  0007_alter_task_deadline.py  0008_user_date_of_birth_user_phone.py  0009_alter_task_deadline.py  0010_user_avatar_picture.py
main/models/: __init__.py  task.py  user.py
main/templates/emails/: base.html
task_manager/: settings.py  urls.py
task_manager/services/: mail.py  single_resource.py  validators.py
templates/emails/: notification.html
test/: base.py  factories.py  test_admin.py  test_jwt_auth.py  test_permission.py  test_send_mail.py  test_user.py
test/test_views/: test_current_user.py
